style.css
/* GENERAL */
html,body{
	width: 100%;
	margin:0;padding: 0;
	user-select: none;
 	font-family: 'Raleway', sans-serif;
}

a{
    text-decoration: none;
    color:black;
}

/*******************/
/*     HEADER      */
header{
	margin:4px 30px 0 30px;
	display: flex;
	justify-content: space-between;
	align-items: center;
	height:7em;
}

header img{
	width:150px;
}

nav{
	display: flex;
	align-items: center;
	justify-content: flex-end;
}

nav ul{
	display: flex;
 	list-style-type: none;
 	font-size: 1em;
}

nav li + li{
    padding-left: 60px;
}

nav a{
	font-weight: bold;
    color: #606061;
    padding-top: 3em;
    padding-bottom: 3em;
}

nav ul a:hover
{
    color: #0065FC;
    border-top: 4px solid #0065FC;
}

a#login{
	margin-left: 60px;
    color: #0065FC;
}

a#login:hover{
    text-shadow: 3px 3px 3px rgba(0,0,0,0.3);
}

/*******************/
/*      FOOTER     */
footer{
	width: 100%;
	background-color: #F2F2F2; /*gris #DEEBFF:bleu clair #0065FC:bleu; */
	display: flex;
	justify-content: space-around;
	margin-top: 30px;	
}

footer div{
	flex-basis: 0;
	padding: 30px;
	flex:1;
}

footer h3{
	padding-bottom: 15px;
	white-space: nowrap;
	margin: 0;
}

footer ul{
	white-space: nowrap;
 	list-style-type: none;
 	padding:0;
 	margin:0;
}

footer li + li{
	padding-top: 10px;
}

/*******************/
/* CONTENT GENERAL */

#content h1{
	margin-bottom: 5px;
	font-size: 1.6em;
}

#content{
	margin:0 30px 0 30px;
}

/*******************/
/*SEARCHBAR SECTION*/

#searchBar{
	margin-bottom: 30px;
}

#searchBar form {
	margin-top : 30px ;
}

/*SEARCHBAR*/
input{
   	font-family: 'Raleway', sans-serif;
	border:none;
	padding: 0 10px 0 10px;
}

input[type="text"]{
	border-top:1px #F2F2F2 solid;
	border-bottom:1px #F2F2F2 solid;
	height: 2.2em;
	min-width: 250px;

}

button{
 	border-radius: 0 10px 10px 0; 	
	min-height: 2.2em;
	cursor:pointer;
	padding: 0;
	color:white;
	font-weight: bold;
	background: #0065FC;
	min-height: calc(2.2em + 2px);
	display: inline-block;
	border:none;
}
button span{
	margin:0 10px 0 10px;
}
button span.fas{
	display: none;
}

@media screen and (max-width: 850px) {

	input[type="text"]{
		min-width: calc(100% - 35px - 35px - 30px + 5px + 5px);
		max-width: 50%;
	}
	button {
		min-width: 35px;
	}
	button span.fas{
		display: inline;
	}
	button span:not(.fas){
		display: none;
	}
}


button:hover {
	border-right-style: outset;
	border-bottom-style: outset;
}

#searchIcon {
	display: flex;
}

.fa-map-marker-alt {
	line-height: 30px !important;
	width: 35px;
	font-size: 0.7em;
	background-color: #F2F2F2;
	border-radius: 10px 0 0 10px;
/*	padding:1em;*/
	text-align: center;
	vertical-align: middle;
}

.fa-map-marker-alt:hover {
 	background-color: #DEEBFF;
}

/*FILTERS*/
#filters{
	display: flex;
	margin:30px 0 30px 0;
	align-items: center;
}

#filters h3{
	padding-right: 30px;
	margin: 0;
}

#filters form {
	display: flex;
	margin:auto 0 ;
}

.filterSelector{
	position: relative;
}
[type="checkbox"] {
  position: absolute;
  left: 40%;top:40%;
  opacity:0;
}

.filterSelector label{
	white-space:nowrap;
	font-weight: bold;
	cursor:pointer;
	display: block;
	border:2px #F2F2F2 solid;
	border-radius: 2em ;
	margin:0 30px 0 0;
	position: relative;
}

.filterSelector label[for="Economique"]:before,
input#Economique:checked + label[for="Economique"]:after {
    font-family: 'FontAwesome';
	color: #0065FC;
	content: "\f53b";
	position: relative;
	background: #DEEBFF;
	border:4px solid #DEEBFF;
	border-radius: 50%;
	display: inline-block;
	text-align: center;
	line-height: 30px;
	width: 30px;
	height: 30px;
}

.filterSelector label[for="Familial"]:before,
input#Familial:checked + label[for="Familial"]:after {
    font-family: 'FontAwesome';
	color: #0065FC;
	content: "\f1ae";
	position: relative;
	background: #DEEBFF;
	border:4px solid #DEEBFF;
	border-radius: 50%;
	display: inline-block;
	text-align: center;
	line-height: 30px;
	width: 30px;
	height: 30px;
}

.filterSelector label[for="Romantique"]:before,
input#Romantique:checked + label[for="Romantique"]:after {
    font-family: 'FontAwesome';
	color: #0065FC;
	content: "\f004";
	position: relative;
	background: #DEEBFF;
	border:4px solid #DEEBFF;
	border-radius: 50%;
	display: inline-block;
	text-align: center;
	line-height: 30px;
	width: 30px;
	height: 30px;
}

.filterSelector label[for="Animaux"]:before,
input#Animaux:checked + label[for="Animaux"]:after {
    font-family: 'FontAwesome';
	color: #0065FC;
	content: "\f6d3";
	position: relative;
	background: #DEEBFF;
	border:4px solid #DEEBFF;
	border-radius: 50%;
	display: inline-block;
	text-align: center;
	line-height: 30px;
	width: 30px;
	height: 30px;
}

.filterSelector label:before{
	margin-right:0.5em;	
}

.filterSelector label:after {
	margin-left: 0.5em;
	color: transparent;
  	content: "";
	position: relative;
	border:2px solid transparent;
}

input:checked + label{
	color:white;
}

input:checked + label:after {
	margin-left: 0.5em;
}

input:checked + label {
	background: #0065FC;
	border:2px  #0065FC solid;
}

input#Animaux:checked + label[for="Animaux"]:before,
input#Romantique:checked + label[for="Romantique"]:before,
input#Economique:checked + label[for="Economique"]:before,
input#Familial:checked + label[for="Familial"]:before {
	background:transparent;
	color: transparent;
	border:2px solid transparent;
  	content: "";
	position: relative;
	display: inline;
	border-radius: 0;
}

label:hover{
	background-color: #F2F2F2;
}

/*INFOS RESULTS*/
#infosResults:before{
	color:#0065FC;
	border-radius: 50%;
	border:1px #606061 solid ; 
	margin-right: 10px;
    font-family: 'FontAwesome';
	content: "\f129";
	display: inline-block;
	line-height: 30px;
	height: 30px;width: 30px;
	font-size: 0.8em;
	text-align: center;
}

#infosResults{
	line-height: 30px;
	vertical-align: center;
}

/*******************/
/* RESULTS SECTION */

h2,#more{
	padding: 30px 0 30px 0;
	margin:0;
	font-weight: bold;
}

#resultsSearch {
	display: flex;
	flex-direction: column;
}

/*******************/
/*  RESULTS HOTELS */
#resultsSearchHotels{
	display: flex;
	flex-basis: 0;
}

#resultsSearchHotels > * {
	display: flex;
	flex-direction: column;
	background-color: #F2F2F2;
	border-radius: 10px;
	padding:0 30px 0 30px;
}

#resultsSearchHotels section {
	flex:2;
	margin-right: 30px;
}

#resultsSearchHotels section > div {
	display: grid;
	grid-gap: 30px;
	grid-template-columns: 1fr 1fr 1fr;
	grid-auto-rows:  1fr ;
}

.hotel, .activity{
	height: 300px;
	background-color: white;
	box-shadow: 2px 5px 5px rgba(0,0,0,0.1); 
	border-radius: 15px;
	border : 6px white solid;
}

.hotel img{
    display: block;
	border-radius: 10px 10px 0  0;
	object-fit: cover;
    height: 65%;
	width: 100%;
}

.descriptionHotel > *{
	margin: auto;
	padding:5px 0 5px 0  ;
}

/*RATINGS*/
.rating {
  padding:5px 0 5px 0  ;
  color: #c5c5c5;
  font-size: 1.5em;
  width: max-content;
  margin:auto;
  position: relative;
} 

.rating::before { 
  content: '★★★★★';
}

[title="0"]::after {
  width: 0%;
}
[title="1"]::after {
  width: 20%;
}
[title="2"]::after {
  width: 40%;
}
[title="3"]::after {
  width: 60%;
}
[title="4"]::after {
  width: 80%;
}
[title="5"]::after {
  width: 100%;
}

.rating::after {
  padding:5px 0 5px 0  ;
  color: #0065FC;
  content: '★★★★★';
  position: absolute;
  z-index: 1;
  display: block;
  left: 0; top:0;
  overflow: hidden;
}

/* MOST POPULAR */
aside .fas{
	font-size : 1.5em;
}

aside{
	flex:1;
}

aside > div{
	display: flex;
	flex-direction: column;
	flex-wrap: wrap;
	justify-content: flex-start;
}

aside > div.title{
	flex-direction: row;	
	justify-content: space-between;
	align-items: center;
}

div.mostPopular{
	background-color: white;
	border-radius: 15px;
	border : 6px white solid;	
	height: 200px;
	margin-bottom:30px;
	flex:1;
}

div.mostPopular a{
	display: flex;
	width: 100%;
	height: 100%;
}

div.mostPopular img {
	display: block;
	height: 200px;
	max-width:50%;
	border-radius: 10px 0 0 10px;
}

div.mostPopular div.info{
	white-space: normal;
	height: 180px;
	width: 50%;
	padding:10px;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	margin:0;
}

/* ACTIVITIES */
#resultsSearchActivities {
	display: flex;
	flex-direction: column;
	width: 100%;
}

#resultsSearchActivities > div {
	display: grid;
	grid-gap: 30px;
	grid-template-columns: repeat(4,1fr);
	margin-top: -15px;
}

.activity {
	box-sizing: border-box;
	height: 150px;
	display:flex;
	flex-direction: column;
	justify-content: space-between;
	border:none;
}

.activity h3 {
	box-sizing: border-box;
	margin:auto;
	max-height: 30px;
	padding-left : 15px;
	white-space: nowrap;
	width: 100%;
}

.big{
	grid-row:1/3;
	height: 330px;
}

.col3{
	grid-column: 3;
}

.activity img{
    display: block;
	border-radius: 10px 10px 0  0;
	object-fit: cover;
	width:100%;
	height: calc(100% - 60px);
}

/*******************/
/*  RESPONSIVITE  */

@media screen and (max-width: 1350px ) {
	#resultsSearchHotels section > div {
		grid-template-columns: 1fr 1fr;
	}

	div.mostPopular,
	div.mostPopular img {
		height: 300px;
	}

	div.mostPopular div.info{
		height: 280px;
	}
}


@media screen and (max-width: 850px) {
	#filters{
		flex-direction: column;
		align-items: flex-start;
	}

	#filters form{
		flex-wrap: wrap;
		margin-top: -15px;
	}

	.filterSelector{
		margin-top: 30px;
	}
}

@media screen and (max-width: 1275px) {
	#resultsSearchActivities div{
		grid-template-columns: 1fr 1fr 1fr; 
	}

	.activity{
		width:calc(33vw - 40px);
		height: 300px;
	}

	.col3{
		grid-column: 1;
	}

	.big{
		grid-row: 1;
	}
}

@media screen and (max-width: 975px) {
	#resultsSearchActivities div{
		grid-template-columns: 1fr 1fr ; 
	}

	.activity{
		width:calc(50vw - 50px);
		height: 300px;
	}

	#resultsSearchHotels{
		flex-direction: column-reverse;
	}

	#resultsSearchHotels section{
		margin-right: 0;
		margin-top: 30px;
	}

	#resultsSearchHotels aside{
		border-radius: 0;
		margin-left: -30px;
		margin-right: -30px;
	}

	#resultsSearchHotels aside > div:not(.title){
		flex-direction: row;
		flex-wrap: wrap;
		margin-left: -15px;
		margin-right: -15px;
	}
	
	.mostPopular{
		min-width: 300px;
		margin-right: 15px;
		margin-left: 15px;

	}

	div.mostPopular,
	div.mostPopular img {
		height: 150px;
	}

	div.mostPopular div.info{
		height: 130px;
		min-width: 60%;
	}

	div.mostPopular img {
		min-width: 40%;
	}

	.mostPopular:last-child{
		max-width: calc(50vw - 60px);
		margin:auto;
		margin-bottom: 30px;
	}

	.rating{
		margin:0;
	}

}

@media screen and (max-width: 700px) {
	footer{
		flex-wrap: wrap;
	}

	footer div{
		flex-grow: 0;
	}

	#resultsSearchHotels aside > div:not(.title){
		flex-direction: column;
	}

	.mostPopular:last-child{
		min-width: calc(100vw - 90px);
	}

}


@media all and (max-width: 650px) {
	#resultsSearchHotels aside > div:not(.title){
		flex-direction: column;
	}

	nav{
		font-size: 1.2em;
	}
	nav ul{
		position:absolute;
		left:0;
		top:100px;
		width: 100%;
		height:40px;
		padding: 0;
		box-sizing: border-box;
	}


	nav ul li {
		padding: 0;
		max-width:50%;
		flex:1;
		text-align: center;
	}

	nav ul a {
		padding: 0;
		width: 100%;
		display: inline-block;
		height: 40px;
		box-sizing: border-box;
		border-bottom: 4px solid #F2F2F2;
	}

	nav ul a:hover {
		border-top: none;
		border-bottom: 4px solid #0065FC;
	}


	header{
		margin-bottom: 70px;
	}

	#content h1{
		padding-right: 50px;
	}

	footer{
		flex-direction: column;
	}


	#searchIcon input[type="button"]:before{
	    font-family: 'FontAwesome';
		color: #0065FC;
		content: "\f002";
		vertical-align: middle;
		display: inline-block;
		width: 30px;
		height: 30px;
		border-radius: 10px;
		text-align: center;
	}

	#resultsSearchActivities div{
		display: flex;
		flex-direction: column; 
	}

	.activity{
		width: calc(100vw - 70px);
		height:200px;
	}

	#resultsSearchHotels section{
		background-color: white;
		padding-left:0;
		padding-right: 0;
	}


	#resultsSearchHotels section > div {
		grid-template-columns: 1fr;
	}
}

